# project_heaven

./: Cargo.toml  README.md
hello_clap/: Cargo.toml  notes.md
hello_clap/src/: main.rs
hello_redis/: Cargo.toml
largest_number/: Cargo.toml
largest_number/src/: large_number.rs  lib.rs  main.rs
largest_number/tests/: largest.rs
rizzmas/: Cargo.toml  notes.md
rizzmas/src/: main.rs
rust_ritual/exercises/01_variables/: variables5.rs
rust_ritual/exercises/05_vecs/: vecs2.rs
rust_ritual/exercises/06_move_semantics/: move_semantics1.rs  move_semantics2.rs  move_semantics3.rs  move_semantics4.rs
rust_ritual/exercises/quizzes/: quiz1.rs
tokio_guide/: Cargo.toml
