[workspace]
resolver = "2"
members = ["hello_clap", "rizzmas"]

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
log = "0.4.27"
# chrono = "0.4.40"
# colored = "3.0.0"
# dialoguer = "0.11.0"
# rand = "0.9.0"
# ratatui = "0.29.0"
# reqwest = "0.12.15"
# scraper = "0.23.1"
# serde = { version = "1.0.219", features = ["derive"] }
# serde_json = "1.0.140"
# tokio = "1.44.1"
